--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 <html>
 
   <head>
-    <script data-require="react@*" data-semver="0.14.2" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react.min.js"></script>
+    <!-- requiring both JQuery and Bootstrap and referencing the stylesheet -->
+    <script data-require="jquery@*" data-semver="2.2.0" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script data-require="bootstrap@*" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <div id="example"></div>
-    <script src="script.js"></script>
+    <div id="container" class="container"></div>
+
+
+    <!-- requiring REACT and the JSX Transformer -->
+    <script src="https://fb.me/react-0.13.3.js"></script>
+    <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
+
+    <script type="text/jsx" src="script.jsx"></script>
   </body>
 
 </html>
